--- a/client/css/style.css
+++ b/client/css/style.css
@@ -79,11 +79,18 @@ nav {
       width: calc(100% - 10px); }
       .auth .auth-form input:focus {
         box-shadow: 0 0 10px; }
+  .auth .auth-error {
+    width: 100%;
+    background: #ffcdd2; }
+    .auth .auth-error p {
+      color: #f44336;
+      text-align: center;
+      font-size: 16px;
+      padding: 10px; }
   .auth .auth-submit {
     height: 40px;
     width: 100%;
-    background: #607d8b;
-    color: #fff; }
+    background: #607d8b; }
     .auth .auth-submit:hover {
       background: #78909c; }
     .auth .auth-submit p {
