--- a/client/scss/style.scss
+++ b/client/scss/style.scss
@@ -3,6 +3,8 @@
 $primary:   #607d8b;
 $secondary: #78909c;
 $background:#eceff1;
+$warning:   #ffcdd2;
+$warn-text: #f44336;
 
 * {
     font-family: 'Montserrat', sans-serif;    
@@ -100,11 +102,20 @@ nav {
             }
         }
     }
+    .auth-error {
+        width: 100%;
+        background: $warning;
+        p {
+            color: $warn-text;
+            text-align: center;
+            font-size: 16px;
+            padding: 10px;
+        }
+    }
     .auth-submit {
         height: 40px;
         width: 100%;
         background: $primary;
-        color: #fff;
         &:hover {
             background: $secondary;
         }
