--- a/client/scss/style.scss
+++ b/client/scss/style.scss
@@ -32,6 +32,18 @@ body {
     background: $primary;
     opacity: 0.3;
 }
+::-webkit-scrollbar {
+    width: 5px;
+}
+::-webkit-scrollbar-track {
+    background: transparent;
+}
+::-webkit-scrollbar-thumb {
+    background: $primary;
+}
+::-webkit-scrollbar-thumb:hover {
+    background: $secondary;
+}
 
 /* NAV */
 nav {
@@ -145,6 +157,124 @@ nav {
             cursor: pointer;
             &:hover {
                 text-decoration: underline;
+            }
+        }
+    }
+}
+
+.error-viewer {
+    background: $warning;
+    height: 30px;
+    cursor: pointer;
+    p {
+        font-size: 16px;
+        padding: 5px 0;
+        color: $warn-text;
+    }
+}
+
+.content {
+    height: calc(100vh - 80px);
+
+    .wrap {
+        height: 100%;
+    }
+    
+    .contact-list {
+        width: 250px;
+        display: inline-block;
+        height: 100%;
+        float: left;
+        overflow-y: scroll;
+
+        .contact {
+            width: 100%;
+            height: 40px;
+            background: #fff;
+            p {
+                font-size: 16px;
+                padding: 10px;
+                color: $primary;
+                display: inline-block;
+                &.new-messages {
+                    color: $warn-text;
+                }
+            }
+            input {
+                font-size: 16px;
+                padding: 5px;
+                margin: 20px 5px;
+                border: 1px solid $primary;
+                border-radius: 10px;
+                color: $primary;
+                &:focus {
+                    box-shadow: 0 0 10px;
+                }
+            }
+            &.hovered {
+                &:hover {
+                    background: $secondary;
+                    p {
+                        color: #fff;
+                    }
+                }
+            }
+            &.input {
+                height: 70px;
+            }
+        }
+    }
+
+    .chat {
+        width: calc(100% - 252px);
+        display: inline-block;
+        height: 100%;
+        float: left;
+        overflow-y: scroll;
+        position: relative;
+
+        .message-box {
+            height: calc(100% - 50px);
+            width: 100%;
+
+            .message {
+                width: 100%;
+                margin: 20px 0;
+                p {
+                    font-size: 14px;
+                    color: $secondary;
+                    background: #fff;
+                    border-radius: 2px;
+                    margin: 0 20px;
+                    padding: 5px;
+                    display: inline-block;
+                    // &.from { float: right; }
+                    &.to { 
+                        background: $secondary;
+                        color: #fff;    
+                    }
+                }
+            }
+        }
+
+        .message-input {
+            height: 50px;
+            width: 100%;
+            position: absolute;
+            bottom: 0;
+            background: $secondary;
+            input {
+                font-size: 16px;
+                padding: 5px;
+                margin: 10px;
+                border: 1px solid $primary;
+                border-radius: 10px;
+                color: $primary;
+                background: $background;
+                width: calc(100% - 40px);;
+                &:focus {
+                    box-shadow: 0 0 10px;
+                }
             }
         }
     }
