--- a/client/css/style.css
+++ b/client/css/style.css
@@ -52,7 +52,8 @@ nav {
   width: 400px;
   left: calc(50% - 200px);
   top: 30vh;
-  background: #fff; }
+  background: #fff;
+  z-index: 100; }
   .auth .auth-tabs {
     width: 100%;
     height: 40px; }
